@@ -156,6 +156,7 @@ EMAIL_HOST = get_secret('REDCROSS_GNY_EMAIL_HOST')
 EMAIL_PORT = 465
 EMAIL_HOST_USER = get_secret('REDCROSS_GNY_EMAIL_HOST_USER')
 SERVER_EMAIL = EMAIL_HOST_USER
+DEFAULT_FROM_EMAIL = EMAIL_HOST_USER
 EMAIL_HOST_PASSWORD = get_secret('REDCROSS_GNY_EMAIL_HOST_PASSWORD')
 EMAIL_USE_SSL = True
 
