@@ -47,6 +47,10 @@
                     <td></td>
                     <td>
                         <input type="submit" value="Log in" />
+                        &nbsp;
+                        <a href="{% url 'password_reset' %}">
+                             Forgot password
+                        </a>
                     </td>
                 </tr>
             </table>
